--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ion-app>
+  <!--
   <ion-split-pane contentId="main">
     <ion-menu type="overlay" contentId="main">
       <ion-header>
@@ -32,6 +33,7 @@
         </ion-list>
       </ion-content>
     </ion-menu>
+  -->
     <ion-router-outlet id="main"></ion-router-outlet>
-  </ion-split-pane>
+  <!--</ion-split-pane>-->
 </ion-app>
