--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -41,3 +41,13 @@ ion-card-subtitle {
   position: absolute;
   right: 20pt;
 }
+
+
+.readMore ion-card-title ion-icon {
+  margin-top: -2px;
+  vertical-align: middle;
+}
+
+ion-progress-bar.negative-margin-bottom {
+  margin-bottom: -3px;
+}
